--- a/src/Vista/Vista_Paquete.form
+++ b/src/Vista/Vista_Paquete.form
@@ -510,16 +510,12 @@
                               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                               <Component id="btncaemp" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnfinme" min="-2" pref="80" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="btnfinal" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                               <Component id="btnagremp" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="lblid3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="txtcoem" min="-2" pref="66" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
+                      <EmptySpace pref="386" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -528,8 +524,6 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtcoem" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblid3" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnca7" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnfi3" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnagre3" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -537,8 +531,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btncaemp" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnfinme" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnagremp" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnfinal" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="10" max="32767" attributes="0"/>
                   </Group>
@@ -546,24 +540,9 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JButton" name="btnfinme">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Finalizar"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JButton" name="btncaemp">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cancelar"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="txtcoem">
-            </Component>
-            <Component class="javax.swing.JLabel" name="lblid3">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Times New Roman" size="14" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="C&#xf3;digo del empleado"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnagremp">
@@ -584,6 +563,11 @@
             <Component class="javax.swing.JButton" name="btnca7">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Atras"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JButton" name="btnfinal">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Siguiente"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -1655,9 +1639,7 @@
                       <Component id="btnca8" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnsiged2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
-                      <Component id="btncared2" min="-2" pref="75" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btnelied2" min="-2" pref="78" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
@@ -1670,7 +1652,6 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btnca8" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnsiged2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btncared2" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnelied2" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -1692,11 +1673,6 @@
             <Component class="javax.swing.JButton" name="btnelied2">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Eliminar"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JButton" name="btncared2">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Cargar"/>
               </Properties>
             </Component>
           </SubComponents>
